--- a/job-crawler/frontend/src/App.scss
+++ b/job-crawler/frontend/src/App.scss
@@ -9,4 +9,13 @@
   padding: 10px;
   margin: 10px 0;
   border-radius: 5px;
+  background-color: #f4f4f4;
+}
+
+.job-listing h2 {
+  margin: 0 0 10px;
+}
+
+.job-listing p {
+  margin: 5px 0;
 }
